<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/yellow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/navy"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:background="@color/yellow"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round_rec_bg">
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/txt_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="13dp"
                    android:background="@null"
                    android:hint="이메일"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/round_rec_empty_input" />

                <EditText
                    android:id="@+id/PassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_id"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="45dp"
                    android:background="@null"
                    android:hint="패스워드"
                    android:inputType="textPersonName"
                    android:password="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/round_rec_empty_input" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="20dp"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save_id"
                    android:textColor="@color/dark_gray"
                    android:buttonTint="@color/yellow"/>

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auto_login"
                    android:textColor="@color/dark_gray"
                    android:buttonTint="@color/yellow"/>
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:background="@drawable/round_rec_fill"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/txt_findID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/findID"
                    android:textColor="@color/light_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"

                    android:text="·"
                    android:textColor="@color/light_gray"/>
                <TextView
                    android:id="@+id/txt_findPW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/findPW"
                    android:textColor="@color/light_gray"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/txt_join"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:text="@string/SignUp"
                    android:textColor="@color/light_green" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/signupwith"
                    android:layout_marginTop="50dp"
                    android:textColor="@color/light_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/facebook_button"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_facaebook"/>
                    <ImageView
                        android:id="@+id/btn_google"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_google"
                        android:layout_marginLeft="20dp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>